[metadata]
name = yavanna
fullname = Yavanna
description = "Easily manage, activate, and cultivate your conda/mamba environments"
long_description = file: README.md
long_description_content_type = text/markdown
author = Leonardo Uieda
author_email = leouieda@gmail.com
license = MIT
license_file = LICENSE.txt
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
url = https://github.com/leouieda/yavanna
project_urls =
    Documentation = https://github.com/leouieda/yavanna
    Release Notes = https://github.com/leouieda/yavanna/releases
    Bug Tracker = https://github.com/leouieda/yavanna/issues
    Source Code = https://github.com/leouieda/yavanna

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    pyyaml>=5.4
    click>=8
    rich>=10.9

[options.extras_require]
dev =
    pytest
    twine
    wheel
    black
    isort

[options.entry_points]
console_scripts =
    yavanna = yavanna.cli:main
